--- a/layouts/partials/sections/hero/index.html
+++ b/layouts/partials/sections/hero/index.html
@@ -1,4 +1,5 @@
 {{ if .Site.Params.hero.enable | default false }}
+<script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.1.1/model-viewer.min.js"></script>
 <section id="hero" class="py-5 align-middle">
     <div class="container px-3 px-sm-5 px-md-5 px-lg-5 pt-lg-3">
         <div class="row">
@@ -29,6 +30,7 @@
                     <div class="col-auto px-0 h-100">
                         {{- partial "sections/hero/social.html" . -}}
                     </div>
+                    
                 </div>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-4">
@@ -39,6 +41,7 @@
                             alt=""
                         >
                     </div>
+                   
                 </div>
             </div>
         </div>
