--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -1,6 +1,6 @@
 /* light mode */
 .light > *{
-    background-color: var(--background-color) !important;
+    background-color: var(#fff) !important;
     color: var(--text-color) !important;
 }
 
