--- a/layouts/partials/sections/contact.html
+++ b/layouts/partials/sections/contact.html
@@ -1,6 +1,31 @@
 {{ if .Site.Params.contact.enable | default false }}
+
 <section id="contact" class="py-5">
     <div class="container">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
+        <script>
+            const container = document.getElementById('model-container');
+            const scene = new THREE.Scene();
+            const camera = new THREE.PerspectiveCamera(75, container.offsetWidth / container.offsetHeight, 0.1, 1000);
+            
+            const renderer = new THREE.WebGLRenderer();
+            renderer.setSize(container.offsetWidth, container.offsetHeight);
+            container.appendChild(renderer.domElement);
+            
+            const loader = new THREE.GLTFLoader();
+            loader.load('{{ "../../../../../assets/objects.gltf" | absURL }}', function (gltf) {
+                scene.add(gltf.scene);
+            });
+            
+            camera.position.z = 5;
+            
+            function animate() {
+                requestAnimationFrame(animate);
+                renderer.render(scene, camera);
+            }
+            
+            animate();
+        </script>
         <h3 class="text-center">{{ .Site.Params.contact.title | default "Get in Touch" }}</h3>
         <div class="px-0 px-md-5 px-lg-5">
             <div class="row justify-content-center px-md-5">
@@ -21,6 +46,7 @@
                                 <button type="submit" class="btn">{{ .Site.Params.contact.btnName | default "Get in Touch" }}</button>
                             </div>
                         </form>
+                       
                     </div>
                     {{ else if .Site.Params.contact.email }}
                     <div class="text-center pt-3">
@@ -28,7 +54,8 @@
                             {{ .Site.Params.contact.btnName | default "Get in Touch" }}
                         </a>
                     </div>
-                    {{ end }}
+                   
+                    
                 </div>
             </div>
         </div>
@@ -48,3 +75,4 @@
     <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
   </symbol>
 </svg>
+{{ end }}
